--- a/wiki/index.html
+++ b/wiki/index.html
@@ -587,6 +587,8 @@ Error message and password prompt
 
 <li>$:/state/toc/Formal language-Regular expression--1652963983</li>
 
+<li>$:/state/toc/Linux-JobControl-1152169851</li>
+
 <li>$:/state/toc/Linux-LinuxTools-1152169851</li>
 
 <li>$:/state/toc/Linux-Signal-1152169851</li>
@@ -610,6 +612,8 @@ Error message and password prompt
 <li>$:/state/toc/TableOfContents-Development-497309061</li>
 
 <li>$:/state/toc/TableOfContents-Liberal arts--118161433</li>
+
+<li>$:/state/toc/TableOfContents-Management--118161433</li>
 
 <li>$:/state/toc/TableOfContents-Quote--118161433</li>
 
@@ -688,6 +692,8 @@ Error message and password prompt
 <li>$:/state/toc/TableOfContents/Development/OS/Linux/Process-wait &amp;&amp; waitpid--118161433</li>
 
 <li>$:/state/toc/TableOfContents/Liberal arts-Literature--118161433</li>
+
+<li>$:/state/toc/TableOfContents/Management-Project Management--118161433</li>
 
 <li>$:/state/toc/TableOfContents/Tools-Tiddly Wiki--118161433</li>
 
@@ -1041,6 +1047,8 @@ Error message and password prompt
 
 <li>Debug</li>
 
+<li>Dev Align With QA when reconstruct</li>
+
 <li>Development</li>
 
 <li>Docker</li>
@@ -1167,6 +1175,8 @@ Error message and password prompt
 
 <li>Make</li>
 
+<li>Management</li>
+
 <li>Merkle tree</li>
 
 <li>mmap</li>
@@ -1237,6 +1247,8 @@ Error message and password prompt
 
 <li>Programming language theory</li>
 
+<li>Project Management</li>
+
 <li>Prometheus</li>
 
 <li>PrometheusIssues</li>
@@ -1302,6 +1314,8 @@ Error message and password prompt
 <li>SIGTERM</li>
 
 <li>SIGTRAP</li>
+
+<li>Strace</li>
 
 <li>stroll</li>
 
@@ -17984,6 +17998,9 @@ exports.context = contextWidget;
 <div created="20200629161225106" modified="20200629161225106" title="$:/state/toc/Formal language-Regular expression--1652963983">
 <pre>open</pre>
 </div>
+<div created="20200717074300465" modified="20200717074301042" title="$:/state/toc/Linux-JobControl-1152169851">
+<pre>close</pre>
+</div>
 <div created="20200630052207446" modified="20200630052207446" title="$:/state/toc/Linux-LinuxTools-1152169851">
 <pre>open</pre>
 </div>
@@ -18008,7 +18025,7 @@ exports.context = contextWidget;
 <div created="20200629161600732" modified="20200629161600732" title="$:/state/toc/Programming language/Programming language theory/Type Theory-Algebraic data type--890961047">
 <pre>open</pre>
 </div>
-<div created="20200623171543251" modified="20200705105012226" title="$:/state/toc/TableOfContents-Development--118161433">
+<div created="20200623171543251" modified="20200717074204647" title="$:/state/toc/TableOfContents-Development--118161433">
 <pre>open</pre>
 </div>
 <div created="20200624163007047" modified="20200624163008038" title="$:/state/toc/TableOfContents-Development--398414299">
@@ -18018,6 +18035,9 @@ exports.context = contextWidget;
 <pre>open</pre>
 </div>
 <div created="20200626125201162" modified="20200706155745993" title="$:/state/toc/TableOfContents-Liberal arts--118161433">
+<pre>open</pre>
+</div>
+<div created="20200717070036577" modified="20200717070036577" title="$:/state/toc/TableOfContents-Management--118161433">
 <pre>open</pre>
 </div>
 <div created="20200624163244790" modified="20200708153208349" title="$:/state/toc/TableOfContents-Quote--118161433">
@@ -18032,8 +18052,8 @@ exports.context = contextWidget;
 <div created="20200704182330311" modified="20200704182330311" title="$:/state/toc/TableOfContents/Development-Algorithm-497309061">
 <pre>open</pre>
 </div>
-<div created="20200708134810232" modified="20200708152046869" title="$:/state/toc/TableOfContents/Development-Backend--118161433">
-<pre>open</pre>
+<div created="20200708134810232" modified="20200717065405672" title="$:/state/toc/TableOfContents/Development-Backend--118161433">
+<pre>close</pre>
 </div>
 <div created="20200626033025418" modified="20200626033031974" title="$:/state/toc/TableOfContents/Development-Computing--118161433">
 <pre>close</pre>
@@ -18050,16 +18070,16 @@ exports.context = contextWidget;
 <div created="20200626103141561" modified="20200707080405621" title="$:/state/toc/TableOfContents/Development-Formal language--118161433">
 <pre>close</pre>
 </div>
-<div created="20200625051716578" modified="20200707080333737" title="$:/state/toc/TableOfContents/Development-Network--118161433">
+<div created="20200625051716578" modified="20200717074208149" title="$:/state/toc/TableOfContents/Development-Network--118161433">
 <pre>close</pre>
 </div>
-<div created="20200624161956789" modified="20200712135909207" title="$:/state/toc/TableOfContents/Development-OS--118161433">
+<div created="20200624161956789" modified="20200717074210318" title="$:/state/toc/TableOfContents/Development-OS--118161433">
 <pre>open</pre>
 </div>
 <div created="20200704182339353" modified="20200704182339353" title="$:/state/toc/TableOfContents/Development-OS-497309061">
 <pre>open</pre>
 </div>
-<div created="20200624102744943" modified="20200706115119719" title="$:/state/toc/TableOfContents/Development-WorkExperience--118161433">
+<div created="20200624102744943" modified="20200717065415330" title="$:/state/toc/TableOfContents/Development-WorkExperience--118161433">
 <pre>close</pre>
 </div>
 <div created="20200626103143294" modified="20200626103143294" title="$:/state/toc/TableOfContents/Development/Formal language-Golang--118161433">
@@ -18137,6 +18157,9 @@ exports.context = contextWidget;
 <div created="20200627161537894" modified="20200629161513064" title="$:/state/toc/TableOfContents/Liberal arts-Literature--118161433">
 <pre>open</pre>
 </div>
+<div created="20200717070037510" modified="20200717070037510" title="$:/state/toc/TableOfContents/Management-Project Management--118161433">
+<pre>open</pre>
+</div>
 <div created="20200704174822829" modified="20200712115724980" title="$:/state/toc/TableOfContents/Tools-Tiddly Wiki--118161433">
 <pre>close</pre>
 </div>
@@ -18185,7 +18208,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200713100933722" list="[[OS-level virtualization]] cgroups [[cgroups + OOM]] Docker Network [[Network Interfaces]] [[Loopback Interface]] [[Eru 超售(Oversold)]] Calico [[Calico for Eru]]" modified="20200717034423723" title="$:/StoryList">
+<div created="20200713100933722" list="LinuxTools Strace Linux Bash OS 抓取bash自身的系统调用 mmap [[Bash Redirect Output]] Management [[Project Management]] [[Dev Align With QA when reconstruct]] Development" modified="20200717074304439" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20191206235905940" modified="20200218074428072" revision="0" tags="$:/tags/Stylesheet" title="$:/styles/onlyice/ui-elements" type="text/vnd.tiddlywiki">
@@ -19234,14 +19257,14 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200502174943975" modified="20200521150755106" title="$:/temp/RenameTags/search">
 <pre>blinks</pre>
 </div>
-<div created="20200418122544376" modified="20200717034122018" title="$:/temp/search">
-<pre>OS-level virtualization</pre>
+<div created="20200418122544376" modified="20200717074214740" title="$:/temp/search">
+<pre>Bash</pre>
 </div>
 <div created="20200626105030927" modified="20200626105030927" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200702123639422" modified="20200716061151233" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>NetworkVirtualization</pre>
+<div created="20200702123639422" modified="20200717074302319" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>JobControl</pre>
 </div>
 <div created="20200629161500897" modified="20200629161500897" title="$:/temp/tobibeer/preview-2-tiddler">
 <pre>Literature</pre>
@@ -19469,7 +19492,7 @@ An async-signal-safe function is one that can be safely called from within a sig
 
 &lt;/div&gt;</pre>
 </div>
-<div created="20200626101719670" modified="20200712141530886" tags="Linux" title="Bash" type="text/x-markdown">
+<div created="20200626101719670" modified="20200717074247205" tags="Linux" title="Bash" type="">
 <pre>[[Linux]]
 
 ## [[Regular expression]] Assertions
@@ -19493,7 +19516,12 @@ Bash 不支持(...)	[[Capturing group]]，所以需要使用[[Positive lookbehin
 (?&lt;!...)	Negative lookbehind
 ```
 
-</pre>
+
+&lt;div class=&quot;tc-table-of-contents&quot;&gt;
+
+&lt;&lt;toc-selective-expandable 'Bash' sort[ind]&gt;&gt;
+
+&lt;/div&gt;</pre>
 </div>
 <div created="20200710163432552" modified="20200710164212653" tags="Bash" title="Bash Redirect Output">
 <pre>[[Bash]]
@@ -19768,6 +19796,16 @@ bash会[[fork]]再[[exec]]跑这个后台程序。
 </div>
 <div created="20200628053835484" modified="20200628053909476" tags="Development" title="Debug">
 <pre>[[Development]]</pre>
+</div>
+<div created="20200717065503461" modified="20200717065752662" tags="[[Project Management]]" title="Dev Align With QA when reconstruct">
+<pre>[[Project Management]]
+
+项目重构时，鉴于发布可能会强依赖SA的时间，无法保证，可以做以下事情：
+
+* `1.0`版本在基本过完后固定下来，不要重复迭代；
+* `1.0` 写好要与QA过的测试样例，场景；
+* QA测出问题后，可以在`1.1`版本的check list补充；
+* 如有什么问题，可以发布旧的稳定版本；</pre>
 </div>
 <div color="#1bff00" created="20200616145438998" modified="20200704174651178" tags="TableOfContents" title="Development" tmap.id="eeab5bd5-37ca-4bf3-bcf1-cebd572ce43b" type="text/vnd.tiddlywiki">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
@@ -20504,6 +20542,13 @@ main是这条规则的目标（Target），main.o、stack.o和maze.o是这条规
 &quot;&quot;&quot;
 &lt;/div&gt;</pre>
 </div>
+<div created="20200717065430202" modified="20200717065446933" tags="TableOfContents" title="Management">
+<pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
+
+&lt;&lt;toc-selective-expandable 'Management' sort[ind]&gt;&gt;
+
+&lt;/div&gt;</pre>
+</div>
 <div created="20200617041259877" modified="20200625044539922" tags="ci Algorithm" title="Merkle tree" type="text/x-markdown">
 <pre>[[Note]]
 
@@ -20800,6 +20845,11 @@ This is why structs are called “product types”.
 <div created="20200626143205460" modified="20200626143313694" tags="[[Programming language]]" title="Programming language theory" type="text/x-markdown">
 <pre>[[Programming language]]
 
+
+</pre>
+</div>
+<div created="20200717065450918" modified="20200717065500734" tags="Management" title="Project Management">
+<pre>[[Management]]
 
 </pre>
 </div>
@@ -21154,6 +21204,81 @@ a condition that a debugger has requested to be informed of.
 For example, when a particular function is executed, or when a particular variable changes value.
 &quot;&quot;&quot;
 &lt;/div&gt;</pre>
+</div>
+<div created="20200717074305953" modified="20200717075258424" tags="LinuxTools" title="Strace">
+<pre>[[LinuxTools]]
+
+! Background
+strace is a diagnostic, debugging and instructional userspace utility for Linux.
+
+[[Very useful tips in official site|https://strace.io/]]
+
+!! Useful params
+```bash
+       -y          Print paths associated with file descriptor arguments.
+
+       -yy         Print ip:port pairs associated with socket file descriptors.
+```
+
+!! Filter by type of syscall
+
+```bash
+-e trace=%desc     Trace all file descriptor related system calls.
+         %file     Trace all system calls which take a file name as an argument.
+         %fstat    Trace fstat and fstatat syscall variants.
+         %fstatfs  Trace fstatfs, fstatfs64, fstatvfs, osf_fstatfs, and osf_fstatfs64 system calls.
+         %ipc      Trace all IPC related system calls.
+         %lstat    Trace lstat syscall variants.
+         %memory   Trace all memory mapping related system calls.
+         %network  Trace all the network related system calls.
+         %process  Trace all system calls which involve process management.
+         %pure     Trace syscalls that always succeed and have no arguments.
+         %signal   Trace all signal related system calls.
+         %stat     Trace stat syscall variants.
+         %statfs   Trace statfs, statfs64, statvfs, osf_statfs, and osf_statfs64 system calls.
+         %%stat    Trace syscalls used for requesting file status.
+         %%statfs  Trace syscalls related to file system statistics.
+```
+
+!! Perform a syscall fault injection.
+
+&lt;&lt;&lt;
+&quot;&quot;&quot;
+$ strace -e trace=open -e fault=open cat
+open(&quot;/etc/ld.so.cache&quot;, O_RDONLY|O_CLOEXEC) = -1 ENOSYS (Function not implemented) (INJECTED)
+open(&quot;/lib/x86_64-linux-gnu/tls/x86_64/libc.so.6&quot;, O_RDONLY|O_CLOEXEC) = -1 ENOSYS (Function not implemented) (INJECTED)
+open(&quot;/lib/x86_64-linux-gnu/tls/libc.so.6&quot;, O_RDONLY|O_CLOEXEC) = -1 ENOSYS (Function not implemented) (INJECTED)
+open(&quot;/lib/x86_64-linux-gnu/x86_64/libc.so.6&quot;, O_RDONLY|O_CLOEXEC) = -1 ENOSYS (Function not implemented) (INJECTED)
+open(&quot;/lib/x86_64-linux-gnu/libc.so.6&quot;, O_RDONLY|O_CLOEXEC) = -1 ENOSYS (Function not implemented) (INJECTED)
+cat: error while loading shared libraries: libc.so.6: cannot open shared object file: Error 38
++++ exited with 127 +++
+&quot;&quot;&quot;
+&lt;&lt;&lt;
+
+!! Count time, calls, and errors for each system call.
+```bash
+$ strace -c ls &gt; /dev/null
+% time     seconds  usecs/call     calls    errors syscall
+------ ----------- ----------- --------- --------- ----------------
+ 89.76    0.008016           4      1912           getdents
+  8.71    0.000778           0     11778           lstat
+  0.81    0.000072           0      8894           write
+  0.60    0.000054           0       943           open
+  0.11    0.000010           0       942           close
+  0.00    0.000000           0         1           read
+  0.00    0.000000           0       944           fstat
+  0.00    0.000000           0         8           mmap
+  0.00    0.000000           0         4           mprotect
+  0.00    0.000000           0         1           munmap
+  0.00    0.000000           0         7           brk
+  0.00    0.000000           0         3         3 access
+  0.00    0.000000           0         1           execve
+  0.00    0.000000           0         1           sysinfo
+  0.00    0.000000           0         1           arch_prctl
+------ ----------- ----------- --------- --------- ----------------
+100.00    0.008930                 25440         3 total
+```
+</pre>
 </div>
 <div created="20200616171330922" modified="20200616171330922" title="stroll">
 <pre></pre>
