--- a/wiki/index.html
+++ b/wiki/index.html
@@ -1149,8 +1149,6 @@ Error message and password prompt
 
 <li>is all program exit cause by signal?</li>
 
-<li>JavaScript</li>
-
 <li>JobControl</li>
 
 <li>Joe Armstrong</li>
@@ -1166,6 +1164,8 @@ Error message and password prompt
 <li>Libnetwork plugin for Calico</li>
 
 <li>Linux</li>
+
+<li>Linux File System</li>
 
 <li>linux process clone api</li>
 
@@ -1242,6 +1242,8 @@ Error message and password prompt
 <li>ProcessID</li>
 
 <li>ProcessSessions</li>
+
+<li>procfs</li>
 
 <li>product type</li>
 
@@ -17963,7 +17965,7 @@ exports.context = contextWidget;
 <div created="20200616155538724" modified="20200625051821012" title="$:/state/tab-1163638994">
 <pre>$:/core/ui/MoreSideBar/Plugins/Theme</pre>
 </div>
-<div created="20200624162006372" modified="20200712141507368" title="$:/state/tab-1528275152">
+<div created="20200624162006372" modified="20200717085855737" title="$:/state/tab-1528275152">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
 <div created="20200418121928767" modified="20200713095828517" title="$:/state/tab-1749438307">
@@ -17978,7 +17980,7 @@ exports.context = contextWidget;
 <div created="20200418122101344" modified="20200625051822456" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Explorer</pre>
 </div>
-<div created="20200418121835270" modified="20200717034117902" title="$:/state/tab/sidebar--595412856">
+<div created="20200418121835270" modified="20200717105335914" title="$:/state/tab/sidebar--595412856">
 <pre>TableOfContents</pre>
 </div>
 <div created="20200504200956301" modified="20200628155701482" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -18116,8 +18118,8 @@ exports.context = contextWidget;
 <div created="20200704182339997" modified="20200704182339997" title="$:/state/toc/TableOfContents/Development/OS-Linux-497309061">
 <pre>open</pre>
 </div>
-<div created="20200705105017698" modified="20200708152118560" title="$:/state/toc/TableOfContents/Development/OS/Linux-Bash--118161433">
-<pre>open</pre>
+<div created="20200705105017698" modified="20200717105337537" title="$:/state/toc/TableOfContents/Development/OS/Linux-Bash--118161433">
+<pre>close</pre>
 </div>
 <div created="20200704182342346" modified="20200704182342346" title="$:/state/toc/TableOfContents/Development/OS/Linux-Bash-497309061">
 <pre>open</pre>
@@ -18134,20 +18136,20 @@ exports.context = contextWidget;
 <div created="20200704182352807" modified="20200704182352807" title="$:/state/toc/TableOfContents/Development/OS/Linux-IPC-497309061">
 <pre>open</pre>
 </div>
-<div created="20200705105034320" modified="20200705105034320" title="$:/state/toc/TableOfContents/Development/OS/Linux-JobControl--118161433">
-<pre>open</pre>
+<div created="20200705105034320" modified="20200717105345608" title="$:/state/toc/TableOfContents/Development/OS/Linux-JobControl--118161433">
+<pre>close</pre>
 </div>
-<div created="20200628082857651" modified="20200708152140011" title="$:/state/toc/TableOfContents/Development/OS/Linux-LinuxTools--118161433">
-<pre>open</pre>
+<div created="20200628082857651" modified="20200717105346474" title="$:/state/toc/TableOfContents/Development/OS/Linux-LinuxTools--118161433">
+<pre>close</pre>
 </div>
-<div created="20200702170820122" modified="20200702170820122" title="$:/state/toc/TableOfContents/Development/OS/Linux-Process--118161433">
-<pre>open</pre>
+<div created="20200702170820122" modified="20200717105347423" title="$:/state/toc/TableOfContents/Development/OS/Linux-Process--118161433">
+<pre>close</pre>
 </div>
 <div created="20200624162617345" modified="20200624162910764" title="$:/state/toc/TableOfContents/Development/OS/Linux-Signal--118161433">
 <pre>close</pre>
 </div>
-<div created="20200708152136725" modified="20200708152136725" title="$:/state/toc/TableOfContents/Development/OS/Linux-SystemProgramming--118161433">
-<pre>open</pre>
+<div created="20200708152136725" modified="20200717105349153" title="$:/state/toc/TableOfContents/Development/OS/Linux-SystemProgramming--118161433">
+<pre>close</pre>
 </div>
 <div created="20200629050210227" modified="20200629165449084" title="$:/state/toc/TableOfContents/Development/OS/Linux/IPC-Signal--118161433">
 <pre>close</pre>
@@ -18212,7 +18214,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200713100933722" list="LinuxTools [[extended Berkeley Packet Filter (eBPF or BPF)]] Strace Linux Bash OS 抓取bash自身的系统调用 mmap [[Bash Redirect Output]] Management [[Project Management]] [[Dev Align With QA when reconstruct]] Development" modified="20200717082724770" title="$:/StoryList">
+<div created="20200713100933722" list="File&amp;IO [[Linux File System]] procfs [[goalng CI build 二进制/tmp/zero-redis: No such file or directory]] [[linux process clone api]] Process Tips [[Environment variables]] JobControl WhyBashCanRunProgram Strace [[extended Berkeley Packet Filter (eBPF or BPF)]]" modified="20200717105338741" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20191206235905940" modified="20200218074428072" revision="0" tags="$:/tags/Stylesheet" title="$:/styles/onlyice/ui-elements" type="text/vnd.tiddlywiki">
@@ -19261,8 +19263,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200502174943975" modified="20200521150755106" title="$:/temp/RenameTags/search">
 <pre>blinks</pre>
 </div>
-<div created="20200418122544376" modified="20200717074214740" title="$:/temp/search">
-<pre>Bash</pre>
+<div created="20200418122544376" modified="20200717105319131" title="$:/temp/search">
+<pre>file system</pre>
 </div>
 <div created="20200626105030927" modified="20200626105030927" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
@@ -20423,9 +20425,6 @@ func main() {
 }
 ```</pre>
 </div>
-<div created="20200717083242742" modified="20200717083242742" title="JavaScript">
-<pre></pre>
-</div>
 <div created="20200704115412787" modified="20200705103553097" tags="Linux" title="JobControl">
 <pre>[[Linux]]
 
@@ -20479,6 +20478,15 @@ At this point, the shell (bash), find, wc, sort, and uniq are all running.
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
 
 &lt;&lt;toc-selective-expandable 'Linux' sort[ind]&gt;&gt;
+
+&lt;/div&gt;</pre>
+</div>
+<div created="20200717105352020" modified="20200717105426955" tags="Linux" title="Linux File System">
+<pre>[[Linux]]
+
+&lt;div class=&quot;tc-table-of-contents&quot;&gt;
+
+&lt;&lt;toc-selective-expandable 'Linux File System' sort[ind]&gt;&gt;
 
 &lt;/div&gt;</pre>
 </div>
@@ -20827,6 +20835,12 @@ At any point in time, one of the process groups in a session is the foreground p
 &lt;/div&gt;
 
 </pre>
+</div>
+<div created="20200717105428827" modified="20200717105503001" tags="[[Linux File System]]" title="procfs">
+<pre>[[Linux File System]]
+
+&lt;&lt;&lt;.tc-big-quote
+The proc filesystem (procfs) is a special filesystem in Unix-like operating systems that presents information about processes and other system information in a hierarchical file-like structure, providing a more convenient and standardized method for dynamically accessing process data held in the kernel than traditional tracing methods or direct access to kernel memory.</pre>
 </div>
 <div created="20200626143636901" modified="20200626171253698" tags="[[Algebraic data type]]" title="product type" type="text/x-markdown">
 <pre>&gt; A product type (from &quot;Cartesian product&quot;, i.e tuples) T = A * B means that a value of type T has a component that is of type A and another component that is of type B. It is used to aggregate parts into a whole.
