--- a/wiki/index.html
+++ b/wiki/index.html
@@ -155,6 +155,8 @@ Error message and password prompt
 
 <li>$:/_sq/Stories/divertTiddlerMacro</li>
 
+<li>$:/_sq/Stories/Story2HistoryList</li>
+
 <li>$:/_sq/Stories/Story2StoryList</li>
 
 <li>$:/.giffmex/.Stylesheet4Stroll</li>
@@ -1397,6 +1399,8 @@ Error message and password prompt
 
 <li>广告词过滤</li>
 
+<li>当程序变现很奇怪，不该变的地方变了</li>
+
 <li>抓取bash自身的系统调用</li>
 
 <li>抽象</li>
@@ -1515,6 +1519,411 @@ Error message and password prompt
 
 
 </pre>
+</div>
+<div created="20200425131030296" current-tiddler="Eru CopyFileToContainer 偶尔会失败" modified="20200717135647038" title="$:/_sq/Stories/Story2HistoryList" type="application/json">
+<pre>[
+    {
+        &quot;title&quot;: &quot;$:/config/Tiddlers/TitleLinks&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 249.296875,
+            &quot;left&quot;: 1230,
+            &quot;width&quot;: 183.515625,
+            &quot;right&quot;: 1413.515625,
+            &quot;bottom&quot;: 269.296875,
+            &quot;height&quot;: 20
+        }
+    },
+    {
+        &quot;title&quot;: &quot;$:/_sq/Stories/divertTiddlerMacro&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 623.296875,
+            &quot;left&quot;: 1230,
+            &quot;width&quot;: 220.390625,
+            &quot;right&quot;: 1450.390625,
+            &quot;bottom&quot;: 643.296875,
+            &quot;height&quot;: 20
+        }
+    },
+    {
+        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/divertTiddlerMacro'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;$:/_sq/Stories/divertTiddlerMacro&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/divertTiddlerMacro'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;$:/_sq/Stories/divertTiddlerMacro&quot;
+    },
+    {
+        &quot;title&quot;: &quot;$:/_sq/Stories/divertTiddlerEditMacro&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 319.296875,
+            &quot;left&quot;: 1230,
+            &quot;width&quot;: 245.53125,
+            &quot;right&quot;: 1475.53125,
+            &quot;bottom&quot;: 339.296875,
+            &quot;height&quot;: 20
+        }
+    },
+    {
+        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/divertTiddlerEditMacro'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;$:/_sq/Stories/divertTiddlerEditMacro&quot;
+    },
+    {
+        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryToggleMenu&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 537.296875,
+            &quot;left&quot;: 1230,
+            &quot;width&quot;: 283.546875,
+            &quot;right&quot;: 1513.546875,
+            &quot;bottom&quot;: 557.296875,
+            &quot;height&quot;: 20
+        }
+    },
+    {
+        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryTogglePageControl&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 297.296875,
+            &quot;left&quot;: 1230,
+            &quot;width&quot;: 326.734375,
+            &quot;right&quot;: 1556.734375,
+            &quot;bottom&quot;: 317.296875,
+            &quot;height&quot;: 20
+        }
+    },
+    {
+        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryTogglePageControl'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryTogglePageControl&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryTogglePageControl'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryTogglePageControl&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryTogglePageControl'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryTogglePageControl&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryToggleMenu'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryToggleMenu&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryToggleMenu'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryToggleMenu&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/divertTiddlerEditMacro'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;$:/_sq/Stories/divertTiddlerEditMacro&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryTogglePageControl'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryTogglePageControl&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryTogglePageControl'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryTogglePageControl&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryTogglePageControl'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryTogglePageControl&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryToggleMenu'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryToggleMenu&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryToggleMenu'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryToggleMenu&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryTogglePageControl'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryTogglePageControl&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/divertTiddlerEditMacro'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;$:/_sq/Stories/divertTiddlerEditMacro&quot;
+    },
+    {
+        &quot;title&quot;: &quot;$:/core/ui/SideBar/Open&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 337.296875,
+            &quot;left&quot;: 1230,
+            &quot;width&quot;: 161.8125,
+            &quot;right&quot;: 1391.8125,
+            &quot;bottom&quot;: 357.296875,
+            &quot;height&quot;: 20
+        }
+    },
+    {
+        &quot;title&quot;: &quot;Draft of '$:/core/ui/SideBar/Open'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;$:/core/ui/SideBar/Open&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/divertTiddlerEditMacro'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;$:/_sq/Stories/divertTiddlerEditMacro&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/divertTiddlerEditMacro'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;$:/_sq/Stories/divertTiddlerEditMacro&quot;
+    },
+    {
+        &quot;title&quot;: &quot;TiddlyBlink&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Stories-overview&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 1035.921875,
+            &quot;left&quot;: 1190,
+            &quot;width&quot;: 101.6875,
+            &quot;right&quot;: 1291.6875,
+            &quot;bottom&quot;: 1054.921875,
+            &quot;height&quot;: 19
+        }
+    },
+    {
+        &quot;title&quot;: &quot;$:/.giffmex/Customize.TiddlyBlink&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 735.625,
+            &quot;left&quot;: 107.5,
+            &quot;width&quot;: 145.171875,
+            &quot;right&quot;: 252.671875,
+            &quot;bottom&quot;: 755.625,
+            &quot;height&quot;: 20
+        }
+    },
+    {
+        &quot;title&quot;: &quot;$:/.giffmex/meta/hack.tiddlyblink&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 757.625,
+            &quot;left&quot;: 107.5,
+            &quot;width&quot;: 129.59375,
+            &quot;right&quot;: 237.09375,
+            &quot;bottom&quot;: 777.625,
+            &quot;height&quot;: 20
+        }
+    },
+    {
+        &quot;title&quot;: &quot;TiddlyBlink&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 161.296875,
+            &quot;left&quot;: 221.953125,
+            &quot;width&quot;: 71.859375,
+            &quot;right&quot;: 293.8125,
+            &quot;bottom&quot;: 181.296875,
+            &quot;height&quot;: 20
+        }
+    },
+    {
+        &quot;title&quot;: &quot;TiddlyBlink&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 161.296875,
+            &quot;left&quot;: 221.953125,
+            &quot;width&quot;: 71.859375,
+            &quot;right&quot;: 293.8125,
+            &quot;bottom&quot;: 181.296875,
+            &quot;height&quot;: 20
+        }
+    },
+    {
+        &quot;title&quot;: &quot;Stories-overview&quot;,
+        &quot;fromPageRect&quot;: {}
+    },
+    {
+        &quot;title&quot;: &quot;Draft of 'Stories-overview'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Stories-overview&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Draft of 'Stories-overview'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Stories-overview&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Draft of 'Stories'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Plugin maker&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 481.34375,
+            &quot;left&quot;: 2259,
+            &quot;width&quot;: 80.890625,
+            &quot;right&quot;: 2339.890625,
+            &quot;bottom&quot;: 500.34375,
+            &quot;height&quot;: 19
+        }
+    },
+    {
+        &quot;title&quot;: &quot;Draft of 'Plugin maker'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Plugin maker&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Stories&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 296.84375,
+            &quot;left&quot;: 2259,
+            &quot;width&quot;: 41.453125,
+            &quot;right&quot;: 2300.453125,
+            &quot;bottom&quot;: 315.84375,
+            &quot;height&quot;: 19
+        }
+    },
+    {
+        &quot;title&quot;: &quot;Plugin maker&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 501.34375,
+            &quot;left&quot;: 2259,
+            &quot;width&quot;: 80.890625,
+            &quot;right&quot;: 2339.890625,
+            &quot;bottom&quot;: 520.34375,
+            &quot;height&quot;: 19
+        }
+    },
+    {
+        &quot;title&quot;: &quot;Draft of 'Plugin maker'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Plugin maker&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Draft of 'Stories'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Stories&quot;
+    },
+    {
+        &quot;title&quot;: &quot;$:/_sq/Stories/config/Settings&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 360.171875,
+            &quot;left&quot;: 1245,
+            &quot;width&quot;: 182.21875,
+            &quot;right&quot;: 1427.21875,
+            &quot;bottom&quot;: 379.171875,
+            &quot;height&quot;: 19
+        }
+    },
+    {
+        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/config/Settings'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;$:/_sq/Stories/config/Settings&quot;
+    },
+    {
+        &quot;title&quot;: &quot;$:/_sq/Stories/config/Settings&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 360.171875,
+            &quot;left&quot;: 1245,
+            &quot;width&quot;: 182.21875,
+            &quot;right&quot;: 1427.21875,
+            &quot;bottom&quot;: 379.171875,
+            &quot;height&quot;: 19
+        }
+    },
+    {
+        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/config/Settings'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;$:/_sq/Stories/config/Settings&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Draft of 'Stories'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Stories&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Draft of 'Stories'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Stories&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Draft of 'Stories'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;$:/plugins/sq/Stories&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 463.734375,
+            &quot;left&quot;: 2321.1875,
+            &quot;width&quot;: 476.734375,
+            &quot;right&quot;: 2797.921875,
+            &quot;bottom&quot;: 482.734375,
+            &quot;height&quot;: 19
+        }
+    },
+    {
+        &quot;title&quot;: &quot;Eru CopyFileToContainer 偶尔会失败&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 300.09375,
+            &quot;left&quot;: 43,
+            &quot;width&quot;: 246.71875,
+            &quot;right&quot;: 289.71875,
+            &quot;bottom&quot;: 318.09375,
+            &quot;height&quot;: 18
+        }
+    },
+    {
+        &quot;title&quot;: &quot;Eru CopyFileToContainer 偶尔会失败&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 299.09375,
+            &quot;left&quot;: 43,
+            &quot;width&quot;: 246.71875,
+            &quot;right&quot;: 289.71875,
+            &quot;bottom&quot;: 317.09375,
+            &quot;height&quot;: 18
+        }
+    },
+    {
+        &quot;title&quot;: &quot;Eru CopyFileToContainer 偶尔会失败&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 299.09375,
+            &quot;left&quot;: 43,
+            &quot;width&quot;: 246.71875,
+            &quot;right&quot;: 289.71875,
+            &quot;bottom&quot;: 317.09375,
+            &quot;height&quot;: 18
+        }
+    }
+]</pre>
 </div>
 <div bag="default" created="20170615140314952" list="" modified="20200704092925368" revision="8" tags="$:/giffmex/stroll" title="$:/_sq/Stories/Story2StoryList" type="text/vnd.tiddlywiki">
 <pre></pre>
@@ -18214,7 +18623,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200713100933722" list="File&amp;IO [[Linux File System]] procfs [[goalng CI build 二进制/tmp/zero-redis: No such file or directory]] [[linux process clone api]] Process Tips [[Environment variables]] JobControl WhyBashCanRunProgram Strace [[extended Berkeley Packet Filter (eBPF or BPF)]]" modified="20200717105338741" title="$:/StoryList">
+<div created="20200713100933722" list="[[Eru 超售(Oversold)]] File&amp;IO [[Linux File System]] procfs [[goalng CI build 二进制/tmp/zero-redis: No such file or directory]] [[linux process clone api]] Process Tips [[Environment variables]] JobControl WhyBashCanRunProgram Strace [[extended Berkeley Packet Filter (eBPF or BPF)]]" modified="20200717135425976" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20191206235905940" modified="20200218074428072" revision="0" tags="$:/tags/Stylesheet" title="$:/styles/onlyice/ui-elements" type="text/vnd.tiddlywiki">
@@ -19263,14 +19672,14 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200502174943975" modified="20200521150755106" title="$:/temp/RenameTags/search">
 <pre>blinks</pre>
 </div>
-<div created="20200418122544376" modified="20200717105319131" title="$:/temp/search">
-<pre>file system</pre>
+<div created="20200418122544376" modified="20200717135424635" title="$:/temp/search">
+<pre>debug</pre>
 </div>
 <div created="20200626105030927" modified="20200626105030927" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200702123639422" modified="20200717074302319" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>JobControl</pre>
+<div created="20200702123639422" modified="20200717135643551" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>Eru CopyFileToContainer 偶尔会失败</pre>
 </div>
 <div created="20200629161500897" modified="20200629161500897" title="$:/temp/tobibeer/preview-2-tiddler">
 <pre>Literature</pre>
@@ -19969,18 +20378,18 @@ func (e *Engine) makeIPV4EndpointSetting(ipv4 string) (*dockernetwork.EndpointSe
 # inspect 获取容器信息 https://godoc.org/github.com/docker/docker/client#Client.ContainerInspect
 # 更新node资源信息</pre>
 </div>
-<div created="20200708151723327" modified="20200709080639444" tags="Eru" title="Eru 超售(Oversold)">
+<div created="20200708151723327" modified="20200717135952611" tags="Eru" title="Eru 超售(Oversold)">
 <pre>现在[[Eru]]超售是通关修改node配置的`initCPU` 与 `initMemory`来实现的，如memory，机器是16G，设置为32G即可分配更多的容器。
 
 对于CPU，Eru是通过内置的概念CPU份数来算的，就是设置一个CPU核可以容纳多少份数的CPU，默认设置为100；
 
-如：0：1000，1：400，代表0号核可以容纳1000份，1号核可以容纳400份，部署一个4核cpu的容器，就要需要 4*100(默认CPU份数) = 400份的CPU。
+如：`0：1000，1：400`，代表0号核可以容纳1000份，1号核可以容纳400份，部署一个4核cpu的容器，就要需要 4*100(默认CPU份数) = 400份的CPU。
 
 所以不管怎么样超售，CPU核数都会是固定的。
 
 
 
-Eru还有动态分配的概念，就是CPUBind——没有设置为true，就会动态分配；就是指实际分配 CPU时，不会去使用设置了的 CPU 份数，只是简单的 +1。
+Eru还有动态分配的概念，就是`CPUBind`——没有设置为true，就会动态分配；就是指实际分配 CPU时，不会去使用设置了的 CPU 份数，只是简单的 +1。
 
 
 
@@ -21721,6 +22130,17 @@ https://www.zhihu.com/question/321235026/answer/659682220
 	regexpWechat    = regexp.MustCompile(`(?:[加+微＋+➕薇？vV威卫星♥❤姓xX信]{2,}|weixin|weix)(?:[，❤️.\s]?)(?:[\x{4e00}-\x{9eff}]?)(?:[:，：]?)([\w\s]{6,})`)
 )
 ```</pre>
+</div>
+<div created="20200717135430747" modified="20200717135631001" tags="Debug" title="当程序变现很奇怪，不该变的地方变了">
+<pre>[[Debug]]
+
+当程序变现很奇怪，不该变的地方变了，被人改了，就得注意：
+
+* 这东西是不是全局可以访问的？
+* 这函数是并发函数吗？
+* 这个是指针，并且在外部被改了吗？
+
+[[Eru CopyFileToContainer 偶尔会失败]] 就是这种情况，调用链太深，查了大半天结果发现这是一个并发函数。</pre>
 </div>
 <div created="20200705140718380" modified="20200705141042479" tags="Bash" title="抓取bash自身的系统调用">
 <pre>[[Bash]]
