--- a/wiki/index.html
+++ b/wiki/index.html
@@ -1181,6 +1181,8 @@ Error message and password prompt
 
 <li>lsof</li>
 
+<li>ltrace - A library call tracer</li>
+
 <li>Make</li>
 
 <li>Management</li>
@@ -18627,7 +18629,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200713100933722" list="LinuxTools [[Linux Trace Tools]] 当程序变现很奇怪，不该变的地方变了 [[Eru 超售(Oversold)]] Debug File&amp;IO [[Linux File System]] procfs [[Use proc's fd to recover files]] [[goalng CI build 二进制/tmp/zero-redis: No such file or directory]] [[linux process clone api]] Process Tips [[Environment variables]] JobControl WhyBashCanRunProgram Strace [[extended Berkeley Packet Filter (eBPF or BPF)]]" modified="20200717143603664" title="$:/StoryList">
+<div created="20200713100933722" list="[[Linux Trace Tools]] [[ltrace - A library call tracer]] 当程序变现很奇怪，不该变的地方变了 [[Eru 超售(Oversold)]] Debug File&amp;IO [[Linux File System]] procfs [[Use proc's fd to recover files]] [[goalng CI build 二进制/tmp/zero-redis: No such file or directory]] [[linux process clone api]] Process Tips [[Environment variables]] JobControl WhyBashCanRunProgram Strace [[extended Berkeley Packet Filter (eBPF or BPF)]]" modified="20200718052255542" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20191206235905940" modified="20200218074428072" revision="0" tags="$:/tags/Stylesheet" title="$:/styles/onlyice/ui-elements" type="text/vnd.tiddlywiki">
@@ -20952,6 +20954,24 @@ The most commonly used IP address on the loopback network is 127.0.0.1 for IPv4 
 <div created="20200628054351273" modified="20200628054351273" title="lsof">
 <pre></pre>
 </div>
+<div created="20200718052257532" modified="20200718052955466" tags="[[Linux Trace Tools]]" title="ltrace - A library call tracer">
+<pre>[[Linux Trace Tools]]
+
+```bash
+$: ltrace ls
+malloc(552)                                      = 0x1013010
+malloc(120)                                      = 0x1013240
+malloc(1024)                                     = 0x10132c0
+free(0x10132c0)                                  = &lt;void&gt;
+free(0x1013010)                                  = &lt;void&gt;
+__libc_start_main(0x402a00, 1, 0x7ffc1b42bcd8, 0x413bb0 &lt;unfinished ...&gt;
+strrchr(&quot;ls&quot;, '/')                               = nil
+setlocale(LC_ALL, &quot;&quot; &lt;unfinished ...&gt;
+malloc(5)                                        = 0x1013010
+free(0x1013010)                                  = &lt;void&gt;
+malloc(120)                                      = 0x1013030
+```</pre>
+</div>
 <div created="20200630070725734" modified="20200630071144607" tags="LinuxTools" title="Make">
 <pre>[[LinuxTools]]
 
@@ -21657,9 +21677,8 @@ For example, when a particular function is executed, or when a particular variab
 &quot;&quot;&quot;
 &lt;/div&gt;</pre>
 </div>
-<div created="20200717074305953" modified="20200717082416152" tags="LinuxTools" title="Strace">
-<pre>[[LinuxTools]]
-
+<div created="20200717074305953" modified="20200718052418207" tags="[[Linux Trace Tools]]" title="Strace">
+<pre>
 ! Background
 strace is a diagnostic, debugging and instructional userspace utility for Linux.
 
