--- a/wiki/index.html
+++ b/wiki/index.html
@@ -1341,6 +1341,8 @@ Error message and password prompt
 
 <li>SystemProgramming</li>
 
+<li>SystemTap</li>
+
 <li>TableOfContents</li>
 
 <li>thanos</li>
@@ -21677,13 +21679,25 @@ For example, when a particular function is executed, or when a particular variab
 &quot;&quot;&quot;
 &lt;/div&gt;</pre>
 </div>
-<div created="20200717074305953" modified="20200718052418207" tags="[[Linux Trace Tools]]" title="Strace">
+<div created="20200717074305953" modified="20200718153633754" tags="[[Linux Trace Tools]]" title="Strace">
 <pre>
 ! Background
 strace is a diagnostic, debugging and instructional userspace utility for Linux.
 
 * [[Very useful tips in official site|https://strace.io/]]
 * [[Julia Evans's blog |https://jvns.ca/categories/strace/]]
+
+! Warning
+&lt;&lt;&lt;.tc-big-quote
+strace is the system call tracer for Linux. It currently uses the arcane ptrace() (process trace) debugging interface, which operates in a violent manner: pausing the target process for each syscall so that the debugger can read state. And doing this twice: when the syscall begins, and when it ends.
+
+This means strace pauses your application twice for each syscall, and context-switches each time between the application and strace. It's like putting traffic metering lights on your application.
+
+[[strace Wow Much Syscall|http://www.brendangregg.com/blog/2014-05-11/strace-wow-much-syscall.html#:~:text=strace(1)%20is%20a%20great,use%20lower%2Dcost%20buffered%20tracing]]
+&lt;&lt;&lt;
+
+!! Tips
+Strace 可以查看二进制加载了哪些版本的动态链接库
 
 !! Useful params
 ```bash
@@ -21824,6 +21838,9 @@ A system call is a controlled entry point into the kernel, allowing a process to
 &lt;&lt;toc-selective-expandable 'SystemProgramming' sort[ind]&gt;&gt;
 
 &lt;/div&gt;</pre>
+</div>
+<div created="20200718153027254" modified="20200718153027254" title="SystemTap">
+<pre></pre>
 </div>
 <div caption="{{$:/language/SideBar/Contents/Caption}}" created="20200623164931845" list-before="$:/core/ui/SideBar/Open" modified="20200704182420316" tags="$:/tags/SideBar" title="TableOfContents" type="">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
