--- a/wiki/index.html
+++ b/wiki/index.html
@@ -695,6 +695,10 @@ Error message and password prompt
 
 <li>$:/state/toc/TableOfContents/Liberal arts-Literature--118161433</li>
 
+<li>$:/state/toc/TableOfContents/Liberal arts/Literature-Chinese literature--118161433</li>
+
+<li>$:/state/toc/TableOfContents/Liberal arts/Literature/Chinese literature-Poems--118161433</li>
+
 <li>$:/state/toc/TableOfContents/Management-Project Management--118161433</li>
 
 <li>$:/state/toc/TableOfContents/Tools-Tiddly Wiki--118161433</li>
@@ -1415,6 +1419,8 @@ Error message and password prompt
 
 <li>控制终端(controlling terminal)</li>
 
+<li>江南</li>
+
 <li>用户态</li>
 
 <li>监控统计，能用Prometheus做的绝不造轮子</li>
@@ -1422,6 +1428,10 @@ Error message and password prompt
 <li>管道(Pipe)</li>
 
 <li>美团ddd</li>
+
+<li>菩萨蛮·人人尽说江南好</li>
+
+<li>虞美人·听雨</li>
 
 <li>载酒</li>
 
@@ -18580,6 +18590,12 @@ exports.context = contextWidget;
 <div created="20200627161537894" modified="20200719122904252" title="$:/state/toc/TableOfContents/Liberal arts-Literature--118161433">
 <pre>open</pre>
 </div>
+<div created="20200719122919487" modified="20200719122919487" title="$:/state/toc/TableOfContents/Liberal arts/Literature-Chinese literature--118161433">
+<pre>open</pre>
+</div>
+<div created="20200719122921541" modified="20200719122921541" title="$:/state/toc/TableOfContents/Liberal arts/Literature/Chinese literature-Poems--118161433">
+<pre>open</pre>
+</div>
 <div created="20200717070037510" modified="20200717070037510" title="$:/state/toc/TableOfContents/Management-Project Management--118161433">
 <pre>open</pre>
 </div>
@@ -18631,7 +18647,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200713100933722" list="宋代卢祖皋的《江城子·画楼帘幕卷新晴》 听雨 Poems [[Chinese literature]] Literature" modified="20200719122858124" title="$:/StoryList">
+<div created="20200713100933722" list="Poems 虞美人·听雨 宋代卢祖皋的《江城子·画楼帘幕卷新晴》 菩萨蛮·人人尽说江南好 [[Chinese literature]] Literature" modified="20200719153751738" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20191206235905940" modified="20200218074428072" revision="0" tags="$:/tags/Stylesheet" title="$:/styles/onlyice/ui-elements" type="text/vnd.tiddlywiki">
@@ -22197,28 +22213,8 @@ this is a text, to be deleted
 - in [imperative programming](https://www.wikiwand.com/en/Imperative_programming), a [subroutine](https://www.wikiwand.com/en/Subroutine) with [side effects](https://www.wikiwand.com/en/Side_effect_(computer_science)) is idempotent if the system state remains the same after one or several calls, in other words if the function from the system state space to itself associated to the subroutine is idempotent in the mathematical sense given in the [definition](https://www.wikiwand.com/en/Idempotence#Definition);
 - in [functional programming](https://www.wikiwand.com/en/Functional_programming), a [pure function](https://www.wikiwand.com/en/Pure_function) is idempotent if it is idempotent in the mathematical sense given in the [definition](https://www.wikiwand.com/en/Idempotence#Definition).</pre>
 </div>
-<div created="20200623022055541" modified="20200719122731795" tags="Poems" title="听雨" type="text/x-markdown">
-<pre>```
-《菩萨蛮·人人尽说江南好》
-韦庄 
-人人尽说江南好，游人只合江南老。春水碧于天，画船听雨眠。
-
-垆边人似月，皓腕凝霜雪。未老莫还乡，还乡须断肠。
-```
-
-```
-虞美人·听雨
-[宋] 蒋捷
-少年听雨歌楼上，
-红烛昏罗帐。
-壮年听雨客舟中，
-江阔云低，断雁叫西风。
-
-而今听雨僧庐下，
-鬓已星星也。
-悲欢离合总无情，
-一任阶前，点滴到天明。
-```</pre>
+<div created="20200719153835574" modified="20200719153835574" title="听雨">
+<pre></pre>
 </div>
 <div created="20200706160052146" modified="20200708153530804" tags="Poems" title="宋代卢祖皋的《江城子·画楼帘幕卷新晴》">
 <pre>&lt;div class=&quot;box&quot;&gt;
@@ -22288,6 +22284,9 @@ https://www.zhihu.com/question/321235026/answer/659682220
 
 在UNIX系统中，用户通过终端登录系统后得到一个Shell进程，这个终端成为Shell进程的控制终端（Controlling Terminal）；由于控制终端是保存在PCB中的信息，而我们知道[[fork]]会复制[[PCB]]中的信息，因此由Shell进程启动的其它进程的控制终端也是这个终端。</pre>
 </div>
+<div created="20200719153732069" modified="20200719153732069" title="江南">
+<pre></pre>
+</div>
 <div created="20200628080509930" modified="20200628080509930" title="用户态">
 <pre></pre>
 </div>
@@ -22314,6 +22313,33 @@ Shell进程先调用pipe创建一对管道描述符，然后[[fork]]出两个子
 <div created="20200621074220750" modified="20200621074248973" tags="Quote" title="美团ddd" type="text/x-markdown">
 <pre>[[Quote]]
 https://tech.meituan.com/2017/12/22/ddd-in-practice.html</pre>
+</div>
+<div created="20200719153649152" modified="20200719153914158" tags="Poems" title="菩萨蛮·人人尽说江南好">
+<pre>[[Poems]]
+
+&lt;&lt;&lt;.tc-big-quote
+&quot;&quot;&quot;
+《菩萨蛮·人人尽说江南好》
+韦庄 
+人人尽说[[江南]]好，游人只合江南老。春水碧于天，画船[[听雨]]眠。
+
+垆边人似月，皓腕凝霜雪。未老莫还乡，还乡须断肠。</pre>
+</div>
+<div created="20200719153753308" modified="20200719153835572" tags="Poems" title="虞美人·听雨">
+<pre>[[Poems]]
+
+&lt;&lt;&lt;.tc-big-quote
+虞美人·听雨
+[宋] 蒋捷
+[[少年]][[听雨]]歌楼上，
+红烛昏罗帐。
+壮年听雨客舟中，
+江阔云低，断雁叫西风。
+
+而今听雨僧庐下，
+鬓已星星也。
+悲欢离合总无情，
+一任阶前，点滴到天明。</pre>
 </div>
 <div created="20200706160220403" modified="20200706160220403" title="载酒">
 <pre></pre>
